# multi-agent-system

./: .env  .env.example  .gitignore  ARCHITECTURE.md  README.md  SKILL.md  package-lock.json  package.json  pyproject.toml  vibe.config.json
.github/: dependabot.yml
.github/workflows/: 05-github-supply-chain-gate.yml  ai-code-review.yml  (+3 more)
adding-ai-design-components-marketplace/: submission-rules.md  validation-logic.md
agents/: 00-creative-director.md  01-research.md  02-product.md  03-design.md  04-content.md  05-github-supply-chain.md  06-builder.md  07-integration.md  08-qa.md  09-email.md  10-launch.md  registry.json
ai-data-engineering/: pipeline-structure.md
artifacts/: manifest.json
code-documenter/: pattern-guide.md
config/: approved-sources.json  cms-schemas.json  design-system-versions.json  model-routing.json  network-policy.json  runtime.json
evaluators/: accessibility-evaluator.md  conversion-evaluator.md  design-evaluator.md  marketplace-evaluator.md  performance-evaluator.md  security-evaluator.md
governance/: dependency-policy.md  naming-conventions.md  review-policy.md  security-policy.md  versioning-policy.md
mcp-server/: mcp.json
mistral_vibe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
release/: changelog-template.md  checklist.md
runtime/: executor.py  graph.py  orchestrator.py  registry.py  state.py
schemas/: state.json
scripts/: audit.js  test-workflow.js  validate-handoff.js  validate.js
tests/: test_graph.py  test_registry.py  test_state.py
writing-github-actions/: best-practices.md
(+53 files in other folders)
